  (PR #1712)
- Avoid addition of spurious trailing zeros when converting units and non-int-type is
  Decimal (PR #1625).
- Implementation for numpy.delete added for Quantity.
  (PR #1669)
- Fixed Quantity type returned from `__dask_postcompute__`.
  (PR #1722)
- Added Townsend unit
  (PR #1738)
- Fix get_compatible_units() in dynamically added units.
  (Fix #1725)

### Breaking Changes

- Support percent and ppm units. Support the `%` symbol.
  (Issue #1277)
- Fix error when parsing subtraction operator followed by white space.
  (PR #1701)
- Removed Td as an alias for denier (within the Textile group)

0.20.1 (2022-10-27)
-------------------

- Simplify registry subclassing.
  (Issue #1631)
- Restore intersphinx cross reference functionality.
  (Issue #1637)
- Use a newer version of flexparser that can deal with
  imports in linked/temporary folders.
  (Issue #1634)


0.20 (2022-10-25)
-----------------

- Reorganized code into facets.
  Each facet encapsulate a Pint functionality.
  (See #1466, #1479)
- The definition parser is now completely appart, making it easy to try other formats.
  (See #1595)
- Extra requires for optional packages are now explicit in setup.cfg
  (See #1627)
- Parse both Greek mu and micro Unicode points without error.
  (Issue #1030, #574)
- Added angular frequency documentation page.
- Move ASV benchmarks to dedicated folder. (Issue #1542)
- Implement `numpy.broadcast_arrays` (#1607)
- An ndim attribute has been added to Quantity and DataFrame has been added to upcast
types for pint-pandas compatibility. (#1596)
- Fix a recursion error that would be raised when passing quantities to `cond` and `x`.
  (Issue #1510, #1530)
- Update test_non_int tests for pytest.
- Create NaN-value quantities of appropriate non-int-type (Issue #1570).
- New documentation format and organization!
- Better support for pandas and dask.

- Add Quantity.to_preferred

0.19.2 (2022-04-23)
-------------------
